feat: interview quiz

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,7 @@ a {
     color-scheme: dark;
   }
 }
+
+
+ /* The following line can be included in your src/index.js or App.js file */
+@import 'bootstrap/dist/css/bootstrap.min.css';
